--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,14 +22,14 @@ on:
             required: false
             type: string
             description: "Used to override the default command to run your unit tests e.g. yarn test:unit-ci"
-            default: "npm run test:unit-ci"
+            default: "npm run test"
     secrets:
       token:
         required: true
 jobs:
   call-nodejs-test-workflow:
     name: Node.js Test
-    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml@dev
+    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml@unit-test
     with:
       eslint-enable: ${{ inputs.eslint-enable }}
       eslint-command: ${{ inputs.eslint-command }}
