--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "conventional-changelog-conventionalcommits": "^8.0.0",
     "aos": "^3.0.0-beta.6",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "framer-motion": "^11.11.17",
     "next": "^15.0.3",
     "nodemailer": "^6.9.16",
@@ -31,14 +31,16 @@
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@tailwindcss/forms": "^0.5.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/aos": "^3.0.7",
-    "@types/nodemailer": "^6.4.17",
     "@types/jest": "^29.5.14",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "semantic-release": "^24.2.0",
     "tailwindcss": "^3.4.15",
-    "jest": "^29.7.0",
     "ts-jest": "^29.2.5"
   }
 }
