--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -37,6 +41,7 @@
     "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "semantic-release": "^24.2.0",
