--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
   execute-code-quality-validation:
     uses: ./.github/workflows/validate.yml
     with:
+      branches: "${{ github.ref_name }}"
       eslint-enable: true
       unit-test-enable: true
       unit-test-command: npm run test
