test: force main shared workflow branch, since it should always use main

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       branches:
-        required: true
+        required: false
         type: string
         description: "The branch to run the workflow on"
         default: "main"
