--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   execute-code-quality-validation:
     uses: ./.github/workflows/validate.yml
     with:
-      branches: "dev"
+      branches: "main"
       eslint-enable: true
       unit-test-enable: true
       unit-test-command: npm run test
