--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,17 @@ jobs:
 
       - name: Get latest tag
         id: get_latest_tag
-        run: echo "LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_ENV
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const latestTag = await github.repos.getLatestRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            });
+            core.exportVariable('LATEST_TAG', latestTag.data.tag_name);
+
+      - name: Print latest tag
+        run: echo "Latest tag is ${{ env.LATEST_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.7.1
