fix: simplify tag echoing in deployment workflow by removing unnecessary command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Echo tags
         run: |
-          echo "Tags: $(git tag)"
+          git tag
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.7.1
