--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,12 @@ jobs:
         id: branch_name
         run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Echo tags
-        run: |
-          git tag
+      - name: Get latest tag
+        id: get_latest_tag
+        run: echo "LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_ENV
+
+      - name: Echo latest tag
+        run: echo "Latest tag is ${{ env.LATEST_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.7.1
