--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,11 @@ jobs:
         id: branch_name
         run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Get latest tag
-        id: get_latest_tag
-        run: echo "LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_ENV
-
-      - name: Echo latest tag
-        run: echo "Latest tag is ${{ env.LATEST_TAG }}"
+      - name: Set Latest Tag
+        id: set_latest_tag
+        run: |
+          echo "LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_ENV
+          echo "Latest tag is ${{ env.LATEST_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.7.1
@@ -73,7 +72,7 @@ jobs:
         run: |
           gcloud run deploy ${{ env.BRANCH_NAME }}-pohlmanprotean-website \
           --image gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image:${{ env.LATEST_TAG }} \
-          --platform managed
+          --platform managed \
           --region europe-west1 \
           --allow-unauthenticated \
           --update-env-vars "EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }},EMAIL_TO=${{ secrets.EMAIL_TO }},EMAIL_USER=${{ secrets.EMAIL_USER }}"
