feat: enable Slack notifications in release workflow and update README

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
     uses: ./.github/workflows/release.yml
     with:
       branches: "${{ github.ref_name }}"
+      slack_enabled: true
     secrets:
       token: ${{ secrets.GH_TOKEN }}
       slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
