--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,19 @@ on:
       branches:
         required: true
         type: string
+        description: 'Branches to trigger the release'
+      slack_enabled:
+        required: false
+        type: boolean
+        default: false
+        description: 'Enable semantic release'
     secrets:
       token:
         required: true
+        description: 'GitHub token'
       slack_webhook:
         required: false
+        description: 'Slack webhook URL'
 jobs:
   # Early exit job to complete workflow if branches is not "main"
   No-release:
@@ -26,16 +34,7 @@ jobs:
     uses: Ridvan-bot/workflows/.github/workflows/semantic-release.yml@main
     with:
       branches: "${{ inputs.branches }}"
+      slack_enabled: "${{ inputs.slack_enabled }}"
     secrets:
-      token: ${{ secrets.GH_TOKEN }}  # Pass the GH_TOKEN as 'token' to release.yml
- 
-  semantic-release-success:
-    if: ${{ needs.execute-semantic-release.result == 'success' }}
-    needs: execute-semantic-release
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      token: ${{ secrets.GH_TOKEN }}
+      slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
