chore: remove unused environment variable from deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,5 +78,5 @@ jobs:
           --platform managed \
           --region europe-west1 \
           --allow-unauthenticated \
-          --update-env-vars "EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }},EMAIL_TO=${{ secrets.EMAIL_TO }},EMAIL_USER=${{ secrets.EMAIL_USER }}" \
+          --update-env-vars "EMAIL_TO=${{ secrets.EMAIL_TO }},EMAIL_USER=${{ secrets.EMAIL_USER }}" \
           --tag ${{ env.REVISION_TAG }}
