--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "@headlessui/react": "^2.2.0",
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
