--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.9",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "framer-motion": "^11.11.17",
     "next": "^15.0.3",
